--- a/k8s/backend-config.yaml
+++ b/k8s/backend-config.yaml
@@ -1,8 +1,9 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: mongo-config
+  name: backend-config
+  namespace: mern-app
 data:
-  PORT: "http://backend-service:5001"
+  PORT: "5001"
   NODE_ENV: "development"
 
