--- a/k8s/frontend-service.yaml
+++ b/k8s/frontend-service.yaml
@@ -2,11 +2,12 @@ apiVersion: v1
 kind: Service
 metadata:
   name: frontend-service
+  namespace: mern-app
 spec:
+  type: NodePort
   selector:
     app: job-app-frontend
   ports:
     - protocol: TCP
       port: 80
-      targetPort: 80
-  type: NodePort
+      targetPort: 3000   # 🔥 CORRECTION
