--- a/k8s/frontend-service.yaml
+++ b/k8s/frontend-service.yaml
@@ -9,5 +9,6 @@ spec:
     app: job-app-frontend
   ports:
     - protocol: TCP
-      port: 80
-      targetPort: 3000   # 🔥 CORRECTION
+      port: 80          # Port exposé par le service
+      targetPort: 80    # ⚡ DOIT correspondre au port du pod
+      nodePort: 31216   # Tu peux garder le même NodePort
