--- a/k8s/backend-service.yaml
+++ b/k8s/backend-service.yaml
@@ -2,11 +2,12 @@ apiVersion: v1
 kind: Service
 metadata:
   name: backend-service
+  namespace: mern-app
 spec:
   selector:
-    app:  job-app-backend
+    app: job-app-backend
   ports:
-  - protocol: TCP
-    port: 5001
-    targetPort: 5001
-  -type: NodePort
+    - protocol: TCP
+      port: 5001       # Port que le frontend utilise
+      targetPort: 5002 # Port sur lequel le pod backend écoute
+  type: ClusterIP
