--- a/k8s/deployment-frontend.yaml
+++ b/k8s/deployment-frontend.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: job-app-frontend
+  namespace: mern-app
 spec:
   replicas: 2
   selector:
@@ -13,17 +14,17 @@ spec:
         app: job-app-frontend
     spec:
       containers:
-      - name: frontend
-image: doua82400/job-app-frontend:latest
-        ports:
-        - containerPort: 80
-        env:
-        - name: REACT_APP_BACKEND_URL
-          value: "http://backend-service:5002"
-        resources:
-          requests:
-            memory: "64Mi"
-            cpu: "50m"
-          limits:
-            memory: "128Mi"
-            cpu: "100m"
+        - name: frontend
+          image: doua82400/job-app-frontend:latest
+          ports:
+            - containerPort: 80
+          env:
+            - name: REACT_APP_BACKEND_URL
+              value: "http://backend-service:5002"
+          resources:
+            requests:
+              memory: "64Mi"
+              cpu: "50m"
+            limits:
+              memory: "128Mi"
+              cpu: "100m"
