--- a/k8s/deployment-frontend.yaml
+++ b/k8s/deployment-frontend.yaml
@@ -20,7 +20,7 @@ spec:
             - containerPort: 80
           env:
             - name: REACT_APP_BACKEND_URL
-              value: "http://backend-service:5002"
+              value: "http://<MINIKUBE_IP>:32002"  # <-- mettre l’IP minikube ici
           resources:
             requests:
               memory: "64Mi"
