Change service type from NodePort to ClusterIP

--- a/k8s/backend-service.yaml
+++ b/k8s/backend-service.yaml
@@ -11,4 +11,4 @@ spec:
       port: 5002
       targetPort: 5002
       nodePort: 32002   # NodePort accessible depuis l’extérieur
-  type: NodePort
+  type: ClusterIP
