Change service type from NodePort to ClusterIP

--- a/k8s/frontend-service.yaml
+++ b/k8s/frontend-service.yaml
@@ -4,7 +4,7 @@ metadata:
   name: frontend-service
   namespace: mern-app
 spec:
-  type: NodePort
+  type: ClusterIP
   selector:
     app: job-app-frontend
   ports:
